# samples

./: CONTRIBUTING.md  README.md
.github/templates/02-samples/: readme.md  structure.md
.github/workflows/: ash-pr-comment.yml  ash-pr-security-scan.yml
01-tutorials/01-fundamentals/07-memory-persistent-agents/: personal_agent_with_memory.ipynb
01-tutorials/02-multi-agent-systems/01-agent-as-tool/: agent-as-tools.ipynb
02-samples/: README.md
02-samples/10-multi-modal-email-assistant-agent/: README.md  requirements.txt
02-samples/10-multi-modal-email-assistant-agent/Multi-modal-data-ingest/: requirements.txt
02-samples/10-multi-modal-email-assistant-agent/Multi-modal-data-ingest/utils/: knowledge_base_operators.py
02-samples/14-research-agent/: .gitignore  .prompt  README.md  pyproject.toml
02-samples/14-research-agent/src/strands_research_agent/: __init__.py  agent.py
02-samples/14-research-agent/src/strands_research_agent/handlers/: callback_handler.py
02-samples/14-research-agent/src/strands_research_agent/tools/: notify.py  scraper.py  store_in_kb.py  system_prompt.py  tasks.py  use_github.py
02-samples/15-custom-orchestration-airline-assistant/: README.md
02-samples/15-custom-orchestration-airline-assistant/data/ma-bench/: README.md
02-samples/15-custom-orchestration-airline-assistant/data/ma-bench/mabench/: bench_types.py  utils.py
02-samples/15-custom-orchestration-airline-assistant/data/ma-bench/mabench/environments/: base.py  user.py
02-samples/15-custom-orchestration-airline-assistant/data/ma-bench/mabench/environments/airline/: env.py  rules.py  tasks.py  tasks_test.py  wiki.py
02-samples/15-custom-orchestration-airline-assistant/data/ma-bench/mabench/environments/airline/data/: __init__.py
02-samples/15-custom-orchestration-airline-assistant/data/ma-bench/mabench/environments/airline/tools/: __init__.py  book_reservation.py  calculate.py  cancel_reservation.py  get_reservation_details.py  get_user_details.py  list_all_airports.py  search_direct_flight-Copy1.py  search_direct_flight.py  search_onestop_flight.py  send_certificate.py  think.py  transfer_to_human_agents.py  (+3 more)
02-samples/15-custom-orchestration-airline-assistant/data/tau-bench/tau_bench/: __init__.py
02-samples/15-custom-orchestration-airline-assistant/data/tau-bench/tau_bench/envs/airline/: tasks_singleturn.json
02-samples/15-custom-orchestration-airline-assistant/src/: reAct_singleTurn.ipynb  reWoo-reAct_singleTurn.ipynb  reWoo_singleTurn.ipynb  reflexion_singleTurn.ipynb  requirements.txt
02-samples/15-custom-orchestration-airline-assistant/src/helpers/: bedrock_helper.py  rewoo_helper_funcs.py  rewoo_react_helper_funcs.py
02-samples/16-ai-ads-generation-agent-with-crypto-payments/: .env.example  README.md  agentkit-x402-strands.ipynb  paid_server.py  requirements.txt
02-samples/16-ai-ads-generation-agent-with-crypto-payments/ad_campaign/: miami_ice_cream_social_ad.html
03-integrations/Amazon-DataProcessing-Agent/: README.md
03-integrations/Native-A2A-Support/: pyproject.toml
03-integrations/Openinference-Arize/: Arize-Observability-openinference-strands.ipynb  requirements.txt  strands_to_openinference_mapping.py
04-UX-demos/04-triage-agent/backend/: main.py  mcpmanager.py  requirements.txt
04-UX-demos/04-triage-agent/deploy/: deploy.sh
04-UX-demos/04-triage-agent/frontend/: .env.development  craco.config.js  package-lock.json  package.json
04-UX-demos/04-triage-agent/frontend/src/: App.js
04-UX-demos/04-triage-agent/frontend/src/components/: ChatInterface.js  LeftSidebar.js
(+1 files in other folders)
