[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-research-agent"
version = "0.1.5"
description = "Sample Research Agent powered by Strands Agents SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
    {name = "Cagatay Cali", email = "cagataycali@icloud.com"}
]
keywords = ["ai", "agent", "research", "strands", "automation", "github", "knowledge-base", "aws", "strands-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.0.0",
    "strands-agents[otel]",
    "strands-agents-tools>=0.1.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "colorama>=0.4.0",
    "rich>=10.0.0",
    "prompt_toolkit>=3.0.0",
    "halo",
    "numpy"
]

[project.optional-dependencies]
# Model providers
openai = ["strands-agents[openai]"]
anthropic = ["strands-agents[anthropic]"]
ollama = ["strands-agents[ollama]"]
llamaapi = ["strands-agents[llamaapi]"]
litellm = ["strands-agents[litellm]"]
mistral = ["strands-agents[mistral]"]


# Development tools
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

# Binary packaging
binary = [
    "pyinstaller>=5.0",
]

# All providers and features
all = [
    "strands-research-agent[openai,anthropic,ollama,llamaapi,litellm,mistral]"
]

[project.urls]
Homepage = "https://github.com/strands-agents/samples"
Repository = "https://github.com/strands-agents/samples"
Issues = "https://github.com/strands-agents/samples/issues"
Documentation = "https://strandsagents.com"

[project.scripts]
strands-research-agent = "strands_research_agent.agent:main"
research-agent = "strands_research_agent.agent:main"



[tool.hatch.build.targets.wheel]
packages = ["src/strands_research_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/strands_research_agent",
    "/README.md",
    "/pyproject.toml",
]

# Development tool configurations
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["strands_research_agent"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N803"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
packages = ["strands_research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"